[gd_scene load_steps=3 format=3 uid="uid://c2nuwjcvtx8tm"]

[ext_resource type="Script" uid="uid://cfwoa8asgaylb" path="res://scripts/components/sub_cat_item.gd" id="1_xwbsv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rt2n2"]
bg_color = Color(0.117647, 0.0705882, 0.0666667, 1)
border_width_bottom = 10
border_color = Color(0.0901961, 0.0392157, 0.0470588, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="SubCatItem" type="HBoxContainer"]
size_flags_horizontal = 3
theme_override_constants/separation = 4
script = ExtResource("1_xwbsv")

[node name="SubCategoryLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Mesas peque√±as"

[node name="SubCategoryButton" type="Button" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_rt2n2")
text = "+"
icon_alignment = 1
expand_icon = true
